# cci_EasyExample

./: .gitignore  .gitmodules  README.md  sonar-project.properties
EasyExample/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
EasyExample/AppCanDriverEsp32/: CanDriverEsp32.cpp  SerialNumber.c
EasyExample/AppCommon/: AppHW.cpp  AppHW.h  AppOutput.c
EasyExample/AppIso/: AppMemAccess.cpp  AppMemAccess.h  App_Base.c  App_Base.h  App_Main.c  App_VTClient.c  App_VTClient.h  App_VTClientLev2.c  App_VTClientLev2.h  VIEngine.h
EasyExample/Diagnostic/: AppIso_Diagnostic.c  AppIso_Diagnostic.h
EasyExample/ISODesigner/MyWorkspace1/: MyWorkspace1.jvo  MyWorkspace1.jvw
EasyExample/ISODesigner/MyWorkspace1/MyProject1/: DataMask_1001.jvi  DataMask_1002.jvi  DataMask_Home.jvi  Devices_MyProject1.jrc  MyProject1.jas  MyProject1.jhw  MyProject1.jod  MyProject1.jop  MyProject1.jops  MyProject1.jot  MyProject1.jpuo  MyProject1.jtl  MyProject1.jvd  MyProject1.jvp  MyProject1.sim  SoftKeyMask_Home.jvi  WorkingSet_0.jvi
EasyExample/ISODesigner/MyWorkspace1/MyProject1/Output/: JVER.xml  JetViewERS.cfg  MyProject1.2.c  MyProject1.3.c  MyProject1.c  MyProject1.c.h  MyProject1.ext.h  MyProject1.iop  MyProject1.iop.h
EasyExample/Samples/AddOn/: AppIso_Output.c
EasyExample/Settings/: settings.c  settings.h  settingsGlib.cpp  settingsNVS.cpp  settingsVoid.cpp
EasyExample/components/protocol_examples_common/: CMakeLists.txt
EasyExample/main/: CMakeLists.txt
EasyExample/spiffs_image/pools/: pool.iop
